# polinom-solver

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  polinom solver.cpp  polinom solver.sln  polinom solver.vcxproj  polinom solver.vcxproj.filters
.github/workflows/: ci.yml
src/: Constans.h  Constants.h  Polynom.cpp  Polynom.h  PolynomSolver.cpp  PolynomSolver.h  main.cpp
tests/: CMakeLists.txt  polynom_tests.cpp  polynomsolver_tests.cpp  test_constants.h
